--- a/Skylab-test-M1-2/index.html
+++ b/Skylab-test-M1-2/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="HTML,CSS">
 <meta name="author" content="Daniele Cedro">
 <title>Test n.2</title>
-<link rel="stylesheet" href="./style.scss">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="wrapper">
